--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,9 +40,8 @@
 
 .title {
   display: flex;
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  width: 100%;
+  height: 100px;
   flex-grow: 1;
 }
 
@@ -54,15 +53,6 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
