--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,21 +33,28 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
+.title span{
+  color: #ff821f;
   text-decoration: none;
 }
 
 .title {
-  display: flex;
-  width: 100%;
-  height: 100px;
-  flex-grow: 1;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: aliceblue;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
 }
 
 .title,
 .description {
   text-align: center;
+  padding-bottom: 0.7em;
 }
 
 .description {
@@ -70,7 +77,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #ff821f;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 45%;
@@ -79,8 +86,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #92c741;
+  border-color: #92c741;
 }
 
 .card h2 {
