--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,10 +20,17 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid #ff821f;
   display: flex;
+  color: #ff821f;
   justify-content: center;
   align-items: center;
+}
+.footer:hover,
+.footer:focus,
+.footer:active {
+  color: #92c741;
+  border-color: #92c741;
 }
 
 .footer a {
