--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,11 +33,20 @@
   border-color: #92c741;
 }
 
-.footer a {
-  display: flex;
+.header {
+  width: 100%;
+  height: 100px;
+  display: block;
+  color: aliceblue;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  padding-top: 2%;
+}
+.header span:hover,
+.header span:focus,
+.header span:active {
+  color: #92c741;
 }
 
 .title span{
