--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: black;
-  color: aliceblue;
 }
 
 a {
@@ -15,4 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
+  text-align: center;
+  background-color: black;
+  color: aliceblue;
 }
