--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,54 +1,75 @@
 .container{
   margin:3% 0%;
 }
+.description{
+  color: whitesmoke;
+}
 .header{
-  color: aliceblue;
+  color: #92c741;
   font-family: 'Caveat', cursive;
-  font-size: 3em;
+  font-size: 5em;
 }
 .header span{
-  font-size: 2em;
-  color: #1A74E2;
+  color: #ff821f;
 }
 .title{
-  color: aliceblue;
-  margin-bottom: 2%;
+  margin: 5% 0% 2% 0%;
+  color: whitesmoke;
 }
 .title span{
-  color: #1A74E2;
+  color: #ff821f;
 }
 .timerText{
   font-size: 1.5em;
+  color: #92c741;
 }
 .timerDiv{
   border-radius: 10px;
-  border-color: 1px solid #1A74E2;
+  border-color: 1px solid #ff821f;
   box-shadow: 2px 2px 20px 2px;
   padding: 3%;
   margin: 3% 3% 1% 3%;
-  color: #1A74E2;
+  color: #ff821f;
   font-size: 2em;
 }
 .cardDiv{
   margin: 5%;
+  border-color: #ff821f;
+  background: transparent;
+  color: whitesmoke;
 }
 .cardDiv h4{
-  color: #1A74E2
+  color: #ff821f;
+}
+.icon{
+  color: whitesmoke;
 }
 .cardAnchor{
   text-decoration: none;
   padding: 2%;
   margin: 2%;
-  background-color: #1A74E2;
-  color: aliceblue;
+  background: #92c741 !important;
+  color: black !important;
   border-radius: 7%;
 }
 .cardDiv:hover{
+  border-color: #92c741;
   box-shadow: 2px 2px 20px 2px;
-  color: #1A74E2;
+  color: #92c741; 
 }
 .marginBottom{
   margin-bottom: 5%;
+}
+.cardSpread{
+  margin: 2%;
+  border-color:  #ff821f;
+  background: transparent;
+  color: whitesmoke;
+}
+.cardSpread:hover{
+  border-color: #92c741;
+  box-shadow: 2px 2px 20px 2px;
+  color: #92c741;
 }
 
 @media (max-width:600px){
